# BitLinear158Compression

./: README.md  pyproject.toml  setup.py
bitlinear158compression/: bitnet.py  utils.py
csrc/: bitlinear158.cpp  bitlinear158_torch_2_4.cpp  bitlinear158compression.h  main_torch_2_4.cpp
csrc/cuda/: bitlinear158_cuda.cu  bitlinear158_cuda_torch_2_4.cu
tests/: test_bitlinear158_inference.py  test_bitlinear158_training.py
